# memory-inspector-mcp

./: .gitignore  README.md
.github/workflows/: build.yml
dll/: CMakeLists.txt  toolchain-mingw-w64.cmake
dll/include/inspector/: formatting.hpp  memory_view.hpp  server.hpp  service.hpp  service_util.hpp  types.hpp
dll/src/: dllmain.cpp  server.cpp  service.cpp  service_disasm.cpp  service_dissect.cpp  service_memory.cpp  service_module.cpp  service_scan.cpp  service_snapshot.cpp  service_struct.cpp  service_thread.cpp  service_watch.cpp
mcp/: server.py
